--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Guide Surveillance B572",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3523/3523063.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2910/2910796.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3523/3523063.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2910/2910796.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": "./index.html",
-  "scope": ".",
+  "start_url": "/b572-guide/",
+  "scope": "/b572-guide/",
   "display": "standalone",
   "theme_color": "#001A70",
   "background_color": "#ffffff",
